--- a/blog.html
+++ b/blog.html
@@ -59,7 +59,7 @@
         </div>
         <nav class="mainmenu mobile-menu">
             <ul>
-                <li class="active"><a href="index.html">Home</a></li>
+                <li class="active"><a href="index.php">Home</a></li>
                 <li><a href="rooms.html">Rooms</a></li>
                 <li><a href="about-us.html">About Us</a></li>
                 <li><a href="./pages.html">Pages</a>
@@ -128,7 +128,7 @@
                 <div class="row">
                     <div class="col-lg-2">
                         <div class="logo">
-                            <a href="index.html">
+                            <a href="index.php">
                                 <img src="img/logo.png" alt="">
                             </a>
                         </div>
@@ -137,7 +137,7 @@
                         <div class="nav-menu">
                             <nav class="mainmenu">
                                 <ul>
-                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="index.php">Home</a></li>
                                     <li><a href="rooms.html">Rooms</a></li>
                                     <li><a href="about-us.html">About Us</a></li>
                                     <li><a href="./pages.html">Pages</a>
