--- a/about-us.html
+++ b/about-us.html
@@ -60,11 +60,11 @@
         <nav class="mainmenu mobile-menu">
             <ul>
                 <li class="active"><a href="index.php">Home</a></li>
-                <li><a href="rooms.html">Rooms</a></li>
+                <li><a href="rooms.php">Rooms</a></li>
                 <li><a href="./about-us.html">About Us</a></li>
                 <li><a href="./pages.html">Pages</a>
                     <ul class="dropdown">
-                        <li><a href="room-details.html">Room Details</a></li>
+                        <li><a href="room-details.php">Room Details</a></li>
                         <li><a href="blog-details.html">Blog Details</a></li>
                         <li><a href="#">Family Room</a></li>
                         <li><a href="#">Premium Room</a></li>
@@ -138,11 +138,11 @@
                             <nav class="mainmenu">
                                 <ul>
                                     <li><a href="index.php">Home</a></li>
-                                    <li><a href="rooms.html">Rooms</a></li>
+                                    <li><a href="rooms.php">Rooms</a></li>
                                     <li class="active"><a href="./about-us.html">About Us</a></li>
                                     <li><a href="./pages.html">Pages</a>
                                         <ul class="dropdown">
-                                            <li><a href="room-details.html">Room Details</a></li>
+                                            <li><a href="room-details.php">Room Details</a></li>
                                             <li><a href="blog-details.html">Blog Details</a></li>
                                             <li><a href="#">Family Room</a></li>
                                             <li><a href="#">Premium Room</a></li>
